--- a/go_server/templates/go_django.html
+++ b/go_server/templates/go_django.html
@@ -6,6 +6,8 @@
 	<link href="{% static 'js_go/css/phwang.css' %}" rel="stylesheet" type="text/css">
 	<script src="{% static 'js_go/js/jquery-2.0.3.min.js' %}"> </script>
 	<script src="{% static 'js_go/js/ajax_object.js' %}"> </script>
+	<script src="{% static 'js_go/js/link_object.js' %}"> </script>
+	<script src="{% static 'js_go/js/link_mgr_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/session_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/session_mgr.js' %}"> </script>
 	<script src="{% static 'js_go/js/util_object.js' %}"> </script>
