--- a/go_server/templates/go_django.html
+++ b/go_server/templates/go_django.html
@@ -9,7 +9,7 @@
 	<script src="{% static 'js_go/js/link_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/link_mgr_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/session_object.js' %}"> </script>
-	<script src="{% static 'js_go/js/session_mgr.js' %}"> </script>
+	<script src="{% static 'js_go/js/session_mgr_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/util_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/holder_entry.js' %}"> </script>
 	<script src="{% static 'js_go/js/holder_pool.js' %}"> </script>
