--- a/go_server/templates/go_django.html
+++ b/go_server/templates/go_django.html
@@ -5,6 +5,7 @@
 	<title> django based Go Game by phwang </title>
 	<link href="{% static 'js_go/css/phwang.css' %}" rel="stylesheet" type="text/css">
 	<script src="{% static 'js_go/js/jquery-2.0.3.min.js' %}"> </script>
+	<script src="{% static 'js_go/js/fabric_folder/switch_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/ajax_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/link_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/link_mgr_object.js' %}"> </script>
