--- a/go_server/templates/go_django.html
+++ b/go_server/templates/go_django.html
@@ -26,6 +26,7 @@
 	<script src="{% static 'js_go/js/go_config.js' %}"> </script>
 	<script src="{% static 'js_go/js/go_container.js' %}"> </script>
 	<script src="{% static 'js_go/js/go_html.js' %}"> </script>
+	<script src="{% static 'js_go/js/html_folder/go_config_html.js' %}"> </script>
 	<script src="{% static 'js_go/js/go_main.js' %}"> </script>
 </head>
 
