--- a/go_server/templates/go_django.html
+++ b/go_server/templates/go_django.html
@@ -17,17 +17,17 @@
 	<script src="{% static 'js_go/js/queue_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/root_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/prelude.js' %}"> </script>
-	<script src="{% static 'js_go/js/go_move.js' %}"> </script>
-	<script src="{% static 'js_go/js/go_board.js' %}"> </script>
-	<script src="{% static 'js_go/js/go_game.js' %}"> </script>
-	<script src="{% static 'js_go/js/go_handler.js' %}"> </script>
-	<script src="{% static 'js_go/js/go_port.js' %}"> </script>
-	<script src="{% static 'js_go/js/go_ui.js' %}"> </script>
-	<script src="{% static 'js_go/js/go_config.js' %}"> </script>
-	<script src="{% static 'js_go/js/go_container.js' %}"> </script>
 	<script src="{% static 'js_go/js/go_html.js' %}"> </script>
 	<script src="{% static 'js_go/js/html_folder/go_config_html.js' %}"> </script>
 	<script src="{% static 'js_go/js/go_main.js' %}"> </script>
+	<script src="{% static 'js_go/js/go_folder/go_move.js' %}"> </script>
+	<script src="{% static 'js_go/js/go_folder/go_board.js' %}"> </script>
+	<script src="{% static 'js_go/js/go_folder/go_game.js' %}"> </script>
+	<script src="{% static 'js_go/js/go_folder/go_handler.js' %}"> </script>
+	<script src="{% static 'js_go/js/go_folder/go_port.js' %}"> </script>
+	<script src="{% static 'js_go/js/go_folder/go_ui.js' %}"> </script>
+	<script src="{% static 'js_go/js/go_folder/go_config.js' %}"> </script>
+	<script src="{% static 'js_go/js/go_folder/go_container.js' %}"> </script>
 </head>
 
 <body id="body">
