--- a/go_server/templates/go_django.html
+++ b/go_server/templates/go_django.html
@@ -6,9 +6,8 @@
 	<link href="{% static 'js_go/css/phwang.css' %}" rel="stylesheet" type="text/css">
 	<script src="{% static 'js_go/js/jquery-2.0.3.min.js' %}"> </script>
 	<script src="{% static 'js_go/js/root_object.js' %}"> </script>
-	<script src="{% static 'js_go/js/prelude.js' %}"> </script>
 	<script src="{% static 'js_go/js/go_main.js' %}"> </script>
-	<script src="{% static 'js_go/js/ajax_object.js' %}"> </script>
+	<script src="{% static 'js_go/js/fabric_folder/ajax_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/fabric_folder/switch_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/fabric_folder/link_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/fabric_folder/link_mgr_object.js' %}"> </script>
