--- a/go_server/templates/go_django.html
+++ b/go_server/templates/go_django.html
@@ -4,9 +4,9 @@
 <head>
 	<title> django based Go Game by phwang </title>
 	<link href="{% static 'js_go/css/phwang.css' %}" rel="stylesheet" type="text/css">
-	<script src="{% static 'js_go/js/jquery-2.0.3.min.js' %}"> </script>
-	<script src="{% static 'js_go/js/root_object.js' %}"> </script>
-	<script src="{% static 'js_go/js/go_main.js' %}"> </script>
+	<script src="{% static 'js_go/js/main_folder/jquery-2.0.3.min.js' %}"> </script>
+	<script src="{% static 'js_go/js/main_folder/root_object.js' %}"> </script>
+	<script src="{% static 'js_go/js/main_folder/go_main.js' %}"> </script>
 	<script src="{% static 'js_go/js/fabric_folder/ajax_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/fabric_folder/switch_object.js' %}"> </script>
 	<script src="{% static 'js_go/js/fabric_folder/link_object.js' %}"> </script>
