--- a/go_server/templates/go_django.html
+++ b/go_server/templates/go_django.html
@@ -19,6 +19,7 @@
 	<script src="{% static 'js_go/js/util_folder/holder_pool.js' %}"> </script>
 	<script src="{% static 'js_go/js/html_folder/go_html.js' %}"> </script>
 	<script src="{% static 'js_go/js/html_folder/go_config_html.js' %}"> </script>
+	<script src="{% static 'js_go/js/go_folder/go_define.js' %}"> </script>
 	<script src="{% static 'js_go/js/go_folder/go_move.js' %}"> </script>
 	<script src="{% static 'js_go/js/go_folder/go_board.js' %}"> </script>
 	<script src="{% static 'js_go/js/go_folder/go_game.js' %}"> </script>
